feat:add recipe content structure

--- a/index.html
+++ b/index.html
@@ -44,9 +44,52 @@
                 </div>
             </div>
         </div>
+        <!-- recipe content  -->
+        <div class="content">
+            <div class="wrapper">
+                <div class="meal" id="meal">
+                    <div class="recipe-header">
+                        <p class="recipe-title"> Restaurant-Quality dishes that you can make at home!<br> Click below!
+                        </p>
+
+                        <div class="recipe-btn">
+                            <button class="get-recipe" id="get-recipe">get the recipe</button>
+                            <button class="star" id="star">
+                                <img src="https://img.icons8.com/fluent/50/000000/star.png" />
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe-info">
+                    <!-- like container -->
+                    <div class="like-wrapper">
+                        <button class="close-btn">
+                            <img src="https://img.icons8.com/fluent-systems-regular/35/000000/close-window.png" />
+                        </button>
+                        <h2 class="like-info-name"> </h2>
+                        <div class="like-info-img">
+                            <button class="delete">
+                                <img src="https://img.icons8.com/fluent/15/000000/delete-sign.png" />
+                            </button>
+                        </div>
+                    </div>
+                    <!-- like container end -->
+                    <div class="recipe-img">
+                    </div>
+                    <div class="recipe-structure">
+                        <h2 class="recipe-name"> </h2>
+                        <p class="category"> </p>
+                        <p class="area"> </p>
+                        <p class="ingredients"> </p>
+                    </div>
+                </div>
+                <div class="recipe-desc">
+                    <p class="desc-title"></p>
+                    <p class="desc"> </p>
+                </div>
+            </div>
+        </div>
     </main>
-
-
     <script src="main.js"></script>
 </body>
 
