--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="menu">
             <div class="wrapper">
                 <div class="menu-links">
-                    <ul class=menu-links>
+                    <ul class="menu-link">
                         <li class="links"><a href="#!">menu</a></li>
                         <li class="links"><a href="#!">numbers</a></li>
                         <li class="links"><a href="#!">strings</a></li>
@@ -42,16 +42,46 @@
                         <li class="links"><a href="#!">favorit</a></li>
                     </ul>
                 </div>
+                <div class="burger-wrapp">
+                    <div class="header-burger">
+                        <span class="burger-line burger-line_first"></span>
+                        <span class="burger-line burger-line_second"></span>
+                        <span class="burger-line burger-line_third"></span>
+                    </div>
+                    <!-- burger-menu-slide -->
+                    <div class="burger-wrapper-slide">
+                        <div class="burger-slide-wrapp">
+                            <div class="burger-nav">
+                                <div class="header-burger close">
+                                    <span class="burger-line burger-line_first"></span>
+                                    <span class="burger-line burger-line_second"></span>
+                                    <span class="burger-line burger-line_third"></span>
+                                </div>
+                                <ul class="burger-menu-link">
+                                    <li class="link"><a href="#!">menu</a></li>
+                                    <li class="link"><a href="#!">numbers</a></li>
+                                    <li class="link"><a href="#!">strings</a></li>
+                                    <li class="link"><a href="#!">animals</a></li>
+                                    <li class="link"><a href="#!">colors</a></li>
+                                    <li class="link"><a href="#!">nature</a></li>
+                                    <li class="link "><a href="#!" class="active">recipe</a></li>
+                                    <li class="link"><a href="#!">favorit</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+
         <!-- recipe content  -->
         <div class="content">
             <div class="wrapper">
                 <div class="meal" id="meal">
                     <div class="recipe-header">
-                        <p class="recipe-title"> Restaurant-Quality dishes that you can make at home!<br> Click below!
+                        <p class="recipe-title"> Restaurant-Quality dishes that you can make at home!<br> Click
+                            below!
                         </p>
-
                         <div class="recipe-btn">
                             <button class="get-recipe" id="get-recipe">get the recipe</button>
                             <button class="star" id="star">
@@ -66,12 +96,17 @@
                         <button class="close-btn">
                             <img src="https://img.icons8.com/fluent-systems-regular/35/000000/close-window.png" />
                         </button>
-                        <h2 class="like-info-name"> </h2>
-                        <div class="like-info-img">
+                        <div class="fav-wrapper-small">
                             <button class="delete">
                                 <img src="https://img.icons8.com/fluent/15/000000/delete-sign.png" />
                             </button>
+                            <div class="like-info">
+                                <h3 class="fav-name "></h3>
+                                <div class=" fav-img">
+                                </div>
+                            </div>
                         </div>
+                        <h2 class="like-info-name"> </h2>
                     </div>
                     <!-- like container end -->
                     <div class="recipe-img">
@@ -88,7 +123,6 @@
                     <p class="desc"> </p>
                 </div>
             </div>
-        </div>
     </main>
     <script src="main.js"></script>
 </body>
