fix:change burger-close icon and style for burger slide menu

--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
                     <div class="burger-wrapper-slide">
                         <div class="burger-slide-wrapp">
                             <div class="burger-nav">
-                                <div class="header-burger close">
-                                    <span class="burger-line burger-line_first"></span>
-                                    <span class="burger-line burger-line_second"></span>
-                                    <span class="burger-line burger-line_third"></span>
+                                <div class="arrow-back">
+                                    <img src="/clevertec/img/arrow-32.ico" alt="" class="close">
                                 </div>
                                 <ul class="burger-menu-link">
                                     <li class="link"><a href="#!">menu</a></li>
